gcc/testsuite/g++.dg/abi/arm_va_list2.h
@@ -1,0 +1,4 @@
+// The mangling of va_list changed in GCC 4.4.  We want to warn about
+// that -- but not in a system header.
+#pragma GCC system_header
+void f(va_list) {}
