gcc/testsuite/g++.dg/template/pr35240.C
@@ -4,9 +4,9 @@
 
 template<int> struct A {};
 
-template<int N> A<sizeof(new int[N][N])> foo();
+template<int N> A<sizeof(new int[N][N])> foo(); // { dg-message "unimplemented" }
 
 void bar()
 {
-  foo<1>(); // { dg-message "unimplemented" }
+  foo<1>(); // { dg-message "instantiated" }
 }
